--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,15 @@ a {
     overflow: hidden;
 }
 /* ============================HEADER=========================================*/
-.header {
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     height: 100vh;
     background: #e6f0ff;
     position: relative;
@@ -59,7 +67,7 @@ a {
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -95,7 +103,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
