--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,8 @@ a {
 }
 
 .hero-wrap {
+    display: flex;
+    align-items: center;
     height: calc(100vh - 90px);
     background: #e6f0ff;
     position: relative;
@@ -107,15 +109,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    padding-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 18px;
     line-height: 1.5;
@@ -124,13 +122,13 @@ a {
     margin-bottom: 8px;
 }
 
-.hero .title {
+.hero-wrap .title {
     font-weight: 700;
     font-size: 6.2rem;
     line-height: 1.19;
     color: #000336;
 }
-.hero .desc {
+.hero-wrap .desc {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.78;
